libquantumida/c2/quantum_swaptheleads
gates.c:746:36: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v11 = ( __m128d)_mm_shuffle_epi32( ( __m128i)state, 68); 
                                   ^~~~~~~~~~~~~~~
/usr/lib/llvm-7/lib/clang/7.0.0/include/emmintrin.h:4347:52: note: expanded from macro '_mm_shuffle_epi32'
  (__m128i)__builtin_ia32_pshufd((__v4si)(__m128i)(a), (int)(imm))
                                                   ^
gates.c:747:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v12 = 0LL; 
    ^ ~~~
gates.c:749:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v14 = 0LL; 
    ^ ~~~
gates.c:750:44: error: use of undeclared identifier 'xmmword_408690'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_408690); 
                                           ^
gates.c:753:42: error: use of undeclared identifier 'xmmword_4086A0'
v18 = _mm_load_si128( ( const __m128i *)&xmmword_4086A0); 
                                         ^
gates.c:754:42: error: use of undeclared identifier 'xmmword_4086B0'
v19 = _mm_load_si128( ( const __m128i *)&xmmword_4086B0); 
                                         ^
gates.c:757:55: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v20 = _mm_unpacklo_epi32( _mm_add_epi32( si128, v16), ( __m128i)0LL); 
                                                      ^~~~~~~~~~~~~
gates.c:759:55: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v22 = _mm_unpacklo_epi32( _mm_add_epi32( v17, si128), ( __m128i)0LL); 
                                                      ^~~~~~~~~~~~~
gates.c:760:17: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
*( _QWORD *)&v21.m128d_f64[0] = v18.m128i_i64[0] << v20.m128i_i8[0]; 
             ~~~^~~~~~~~~~
gates.c:760:36: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)&v21.m128d_f64[0] = v18.m128i_i64[0] << v20.m128i_i8[0]; 
                                ~~~^~~~~~~~~~
gates.c:760:56: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)&v21.m128d_f64[0] = v18.m128i_i64[0] << v20.m128i_i8[0]; 
                                                    ~~~^~~~~~~~~
gates.c:762:17: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
*( _QWORD *)&v23.m128d_f64[0] = v18.m128i_i64[0] << v22.m128i_i8[0]; 
             ~~~^~~~~~~~~~
gates.c:762:36: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)&v23.m128d_f64[0] = v18.m128i_i64[0] << v22.m128i_i8[0]; 
                                ~~~^~~~~~~~~~
gates.c:762:56: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)&v23.m128d_f64[0] = v18.m128i_i64[0] << v22.m128i_i8[0]; 
                                                    ~~~^~~~~~~~~
gates.c:895:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
gates.c:1073:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 warnings and 14 errors generated.
objcode.c:176:18: warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
  va_start(args, operation);
                 ^
objcode.c:165:35: note: parameter of type 'unsigned char' is declared here
quantum_objcode_put(unsigned char operation, ...)
                                  ^
1 warning generated.
